# sift-mcp

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  quickstart-lite.sh  quickstart.sh  setup-sift.sh  setup.sh  sift-install.sh
.github/workflows/: ci.yml  docs.yml
claude-code/: CLAUDE.md  settings.json
claude-code/full/: CLAUDE.md  FORENSIC_DISCIPLINE.md  TOOL_REFERENCE.md  settings.json
claude-code/hooks/: forensic-audit.sh  pre-bash-guard.sh
claude-code/lite/: CLAUDE.md  FORENSIC_DISCIPLINE.md  TOOL_REFERENCE.md  mcp.json.example  settings.json
claude-code/shared/: FORENSIC_TOOLS.md
config/: gateway.yaml.example
data/catalog/: malware.yaml  misc.yaml  sleuthkit.yaml  timeline.yaml  volatility.yaml  zimmerman.yaml
docs/: architecture.md  cli-reference.md  deployment.md  examiner-portal.md  getting-started.md  index.md  librechat-setup.md  mcp-reference.md  security.md  user-guide.md
scripts/: bump-version.sh  setup-sift.sh
src/sift_mcp/: __init__.py  __main__.py  audit.py  catalog.py  config.py  environment.py  exceptions.py  executor.py  installer.py  oplog.py  response.py  security.py  server.py
tests/: conftest.py  pre-ship-vm-tests.sh  test_adversarial_security.py  test_catalog.py  test_discovery.py  test_environment.py  test_response.py  test_server.py  test_tools.py
tests/test_case_mcp/: test_server.py
tests/test_claude_code/: test_forensic_audit.py
tests/test_forensic_knowledge/: test_loader.py  test_schemas.py
tests/test_forensic_mcp/: test_audit.py  test_case_manager.py  test_oplog.py  test_provenance.py  test_report_tools.py  test_server.py  test_validation.py
tests/test_forensic_rag/: conftest.py  test_audit.py  test_extended_nlp.py  test_extended_security.py  test_final_coverage.py  test_fs_safety.py  test_network_safety.py  test_rag_comprehensive.py  test_review_fixes.py
tests/test_integration/: conftest.py  test_case_workflow.py  test_gateway.py  test_sift_tools.py
tests/test_opencti/: conftest.py  test_adaptive.py  test_advanced_security.py  test_audit.py  test_cache.py  test_chaos_resilience.py  test_client.py  test_comprehensive_security.py  test_configurable_allowlists.py  test_connection_matrix.py  test_contract_integration.py  test_coverage_gaps.py  test_deep_security.py  test_edge_cases_deep.py  test_exhaustive_functional.py  test_exhaustive_security.py  test_fuzzing_mutations.py  test_high_threat_security.py  test_lifecycle_matrix.py  test_live_new_features.py  test_logging.py  test_mcp_protocol.py  test_network_matrix.py  test_new_features.py  test_new_validations.py  test_performance.py  test_resilience_matrix.py  test_review_fixes.py  test_security.py  test_server.py  test_tool_edge_cases.py  test_validation.py  (+1 more)
(+75 files in other folders)
