[project]
name = "sift-mcp-workspace"
version = "0.1.0"
description = "AIIR forensic investigation platform — SIFT workstation monorepo"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = [
    "packages/forensic-mcp/src",
    "packages/sift-mcp/src",
    "packages/sift-common/src",
    "packages/forensic-knowledge/src",
    "packages/sift-gateway/src",
    "packages/forensic-rag/src",
    "packages/windows-triage/src",
    "packages/opencti/src",
]
branch = true
